--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
